# Distill

./: .gitignore  CLAUDE.md  README.md  config.toml.example  main.py  pyproject.toml  requirements.txt  verify_graph.py
agent/: __init__.py  models.py  prompts.py  tracing.py  utils.py
agent/context/: optimizer.py
agent/ps_agent/: __init__.py  graph.py  models.py  prompts.py  state.py  tools.py
agent/tools/: __init__.py  constants.py  db_tool.py  filter_tool.py  memory_tool.py  search_tool.py  writing_tool.py
agent/workflow/: __init__.py  db_providers.py  executor.py  expansion.py  language.py  layered.py  planner.py  providers.py
apps/backend/: crons.py  main.py
core/: embedding.py  llm_client.py  parsers.py  rate_limiter.py
distill_workflow_lib/: api.py  cli.py  executor.py  providers.py
docs/: ARCHITECTURE.md  CONFIG.md  DISTILL_WORKFLOW_LIB_PACKAGING_PLAN.md
test/: conftest.py  test_agent.py  test_brief_view_model_serialization.py  test_db_tool.py  test_expandable_topics.py  test_frontend_language_switcher.py  test_frontend_reader_typography.py  test_layered_memory_records.py  test_layered_workflow.py  test_loop_limits.py  test_optional_expansion_persistence.py  test_optional_expansion_router.py  test_optional_expansion_service.py  test_ps_agent.py  test_service.py  test_task_localization.py  test_workflow_cleanup.py  test_workflow_db_decoupling.py  test_workflow_executor_layering.py  test_workflow_forbidden_imports.py  test_workflow_lib_contract.py  test_workflow_lib_subpackage_import.py  test_workflow_providers.py  test_writing_pipeline.py
(+112 files in other folders)
